--- a/styles/themeStyles.module.scss
+++ b/styles/themeStyles.module.scss
@@ -3,6 +3,7 @@
 $deep-blue: #032E59;
 $green-1: #4BB29E;
 $green-2: #7BC5B6;
+$green-3: #D4ECE7;
 $yellow-1: #FFD658;
 $yellow-2: #FFDB6B; 
 $gray-1: #8197AC;
