--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,27 +1,14 @@
 @import "../styles/themeStyles.module.scss";
 
+.marquee_1{
+    margin-bottom: calc(45px + (245 - 45) * ((100vw - 1200px) / (3840 - 1200)));
+}
+
 .carrousel_novedades{
     margin-bottom: calc(85px + (350 - 85) * ((100vw - 1200px) / (3840 - 1200)));
     .card{
-        display: block;
-        background-color: $gray-6;
-        width: calc(250px + (1500 - 250) * ((100vw - 1200px) / (3840 - 1200)));
-        padding: calc(15px + (60 - 15) * ((100vw - 1200px) / (3840 - 1200)));
-        margin-left: calc(20px + (80 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-        color: $deep-blue;  
-        text-decoration: none;
-        img{
-            width: 100%;
-            height: auto;
-        }
-        h5{
-            @include font-level-2; 
-            font-weight: 400;
-            margin-bottom: calc(20px + (40 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-        }
+        @include basic-card-1;
         p{
-            @include font-level-4; 
-            font-weight: 400;
             margin-bottom: calc(20px + (40 - 20) * ((100vw - 1200px) / (3840 - 1200)));
         }
     }
