--- a/styles/themeStyles.module.scss
+++ b/styles/themeStyles.module.scss
@@ -19,37 +19,37 @@ $white: #FFFFFF;
 
 @mixin font-level-1 {
     font-size: calc(28px + (90 - 28) * ((100vw - 1200px) / (3840 - 1200)));
-    @media screen and (max-width: 1024px){
+    /* @media screen and (max-width: 1024px){
         font-size: calc(17px + (38 - 17) * ((100vw - 300px) / (1024 - 300)));
-    }
+    } */
 }
 
 @mixin font-level-2 {
-    font-size: calc(28px + (68 - 28) * ((100vw - 1200px) / (3840 - 1200)));
-    @media screen and (max-width: 1024px){
+    font-size: calc(27px + (70 - 27) * ((100vw - 1200px) / (3840 - 1200)));
+    /* @media screen and (max-width: 1024px){
         font-size: calc(17px + (38 - 17) * ((100vw - 300px) / (1024 - 300)));
-    }
+    } */
 }
 
 @mixin font-level-3 {
-    font-size: calc(28px + (68 - 28) * ((100vw - 1200px) / (3840 - 1200)));
-    @media screen and (max-width: 1024px){
+    font-size: calc(18px + (58 - 18) * ((100vw - 1200px) / (3840 - 1200)));
+    /* @media screen and (max-width: 1024px){
         font-size: calc(17px + (38 - 17) * ((100vw - 300px) / (1024 - 300)));
-    }
+    } */
 }
 
 @mixin font-level-4 {
-    font-size: calc(16px + (36 - 16) * ((100vw - 1200px) / (3840 - 1200)));
-    @media screen and (max-width: 1024px){
+    font-size: calc(14.5px + (36 - 14.5) * ((100vw - 1200px) / (3840 - 1200)));
+    /* @media screen and (max-width: 1024px){
         font-size: calc(16px + (36 - 16) * ((100vw - 1200px) / (3840 - 1200)));
-    }
+    } */
 }
 
 @mixin font-level-5 {
     font-size: calc(28px + (68 - 28) * ((100vw - 1200px) / (3840 - 1200)));
-    @media screen and (max-width: 1024px){
+    /* @media screen and (max-width: 1024px){
         font-size: calc(17px + (38 - 17) * ((100vw - 300px) / (1024 - 300)));
-    }
+    } */
 }
 
 
@@ -61,7 +61,7 @@ $line-1: calc(1.5px + (3 - 1.5) * ((100vw - 1200px) / (3840 - 1200)));
 // Containers Width
 
 @mixin container-width-1 {
-    width: calc(1018px + (3100 - 1018) * ((100vw - 1200px) / (3840 - 1200)));
+    width: calc(1018px + (3000 - 1018) * ((100vw - 1200px) / (3840 - 1200)));
     margin: 0 auto;
 }
 
@@ -94,5 +94,34 @@ $line-1: calc(1.5px + (3 - 1.5) * ((100vw - 1200px) / (3840 - 1200)));
             background-color: $deep-blue;
             color: $white;
         }
+    }
+}
+
+
+// Cards
+
+@mixin basic-card-1 {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: $gray-6;
+    width: calc(450px + (1150 - 450) * ((100vw - 1200px) / (3840 - 1200)));
+    padding: calc(15px + (60 - 15) * ((100vw - 1200px) / (3840 - 1200)));
+    margin-left: calc(32px + (82 - 32) * ((100vw - 1200px) / (3840 - 1200)));
+    color: $deep-blue;  
+    text-decoration: none;
+    img{
+        width: 100%;
+        height: auto;
+    }
+    h5{
+        @include font-level-2; 
+        font-weight: 400;
+        line-height: 130%;
+        margin-bottom: calc(50px + (150 - 50) * ((100vw - 1200px) / (3840 - 1200)));
+    }
+    p{
+        @include font-level-4; 
+        font-weight: 400;
+        line-height: 132%;
     }
 }
