cambio de color

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,8 @@ html, body, #__next {
     -moz-osx-font-smoothing: grayscale;
     font-family: 'Roboto', sans-serif; 
     overscroll-behavior-y: none;
-    overflow: hidden;   
+    overflow: hidden; 
+    background-color: #ff6954;  
 }
 
 button{
