--- a/components/producciones/ProductionsAdvancedFilters/ProductionsAdvancedFilters.module.scss
+++ b/components/producciones/ProductionsAdvancedFilters/ProductionsAdvancedFilters.module.scss
@@ -1,25 +1,47 @@
 @import "../../../styles/themeStyles.module.scss";
 
-.hashtags{
-    background-color: antiquewhite;
-    margin: 40px 0 40px 0;
-    .btn_filter{
-        margin-left: 20px;
-        font-size: 20px;
-        &.active{
-            background-color: red;
+.wrapper{
+    background-color: $white;
+    width: 100%;
+
+    .menu_btn{
+        @include btn-ver-mas;
+    }
+
+    .search_bar{
+        width: 50%;
+        @include font-level-4;
+        font-weight: 400;
+        line-height: 100%; 
+        color: $deep-blue;    
+        border: $line-1 solid $deep-blue;
+        padding:
+        calc(7px + (22 - 7) * ((100vw - 1200px) / (3840 - 1200)))
+        calc(14px + (40 - 14) * ((100vw - 1200px) / (3840 - 1200)))
+        ;
+    }
+
+    .hashtags{
+        background-color: antiquewhite;
+        margin: 40px;
+        .btn_filter{
+            margin-left: 20px;
+            font-size: 20px;
+            &.active{
+                background-color: red;
+            }
         }
     }
-}
 
-.authors{
-    background-color: rgb(166, 244, 255);
-    margin: 40px 0 40px 0;
-    .btn_filter{
-        margin-left: 20px;
-        font-size: 20px;
-        &.active{
-            background-color: red;
+    .authors{
+        background-color: rgb(166, 244, 255);
+        margin: 40px;
+        .btn_filter{
+            margin-left: 20px;
+            font-size: 20px;
+            &.active{
+                background-color: red;
+            }
         }
     }
 }
