--- a/pages/producciones/producciones.module.scss
+++ b/pages/producciones/producciones.module.scss
@@ -13,12 +13,40 @@
     color: $deep-blue;
     @include font-level-4;
 
+    h1{
+        font-weight: 400;
+        margin-bottom: 8%;
+    }
+
+    h3, h4{
+        margin-bottom: 8%;
+
+
+    }
+
+    a{
+        color: $deep-blue;
+    }
+
+    p{
+        margin-bottom: 8%;
+    }
+
+    .arrowBack{
+        margin-bottom: 8%;
+        a{
+            border-bottom: 3px solid $yellow-1;
+            text-decoration: none;
+            @include font-level-4;
+        }
+    }
+
 
     .col_left{
         .btn{
             @include btn-ver-mas;
             border-color: $deep-blue;
-            margin: 6px 0;
+            margin: 6px 6px 6px 0;
             @media screen and (min-width: 1024px){
                 &:hover{
                     background-color: $gray-6;
@@ -29,7 +57,7 @@
         }
 
         .hashtags{
-            padding: 5% 0;
+            padding: 0 0 8%;
 
             ul{
                 padding: 0;
@@ -42,7 +70,6 @@
                 }
     
             }
-    
         }
     }
 
