--- a/components/asesorias/ParagraphAndButton/ParagraphAndButton.module.scss
+++ b/components/asesorias/ParagraphAndButton/ParagraphAndButton.module.scss
@@ -54,4 +54,21 @@
             height: auto;
         }
     }
+    span{
+        position: relative; 
+        z-index: 2;         
+        &::before {              
+            background-color: #ffd658;
+            content: "";
+            position: absolute;
+            z-index: -1;
+            height: calc(6px + (18 - 6) * ((100vw - 1200px) / (3840 - 1200)));                       
+            width: 101%;
+            left: -0.5%;
+            right: 0;
+            bottom: calc(-2px + (-8 - -2) * ((100vw - 1200px) / (3840 - 1200)));
+        }
+    }
+    
 }
+
